--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trial-sync-kit</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>THEMISON APP</title>
+    <meta name="description" content="THEMISON Demo" />
+    <meta name="author" content="Themison Demo" />
 
-    <meta property="og:title" content="trial-sync-kit" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="THEMISON APP" />
+    <meta property="og:description" content="Themison Development ©2025" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
 
     <!-- Frappe Gantt desde CDN (versión más reciente) -->
     <link
